src/App.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
@import './assets/colors.css';

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: #fffcf7;
}

p {
  font-size: 0.8rem;
}

button {
  font-family: 'Quicksand', sans-serif;
  color: #1f1f1f;
  font-weight: bold;
}

button:hover {
  border: 1px solid var(--color-secondary);
  color: var(--color-secondary);
  background-color: transparent;
}

.container {
  display: flex;
  max-width: 1400px;
  margin: auto;
  gap: 20px;
  font-family: 'Quicksand', sans-serif;
  color: var(--color-black);
  padding: 20px;
}

.column {
  flex: 1;
  max-height: 800px;
  
}

.profile {
  text-align: center;
  border: 2px solid var(--color-primary);
  padding: 20px;
  max-width: 230px;
  background-color: var(--color-white);

  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.25rem; 
}

/* .profile img {
  width: 12rem;
} */

.profile-image {
  width: 100%; 
  height: auto;
}

.resume-button {
  background-color: var(--color-secondary);
  border: none;
  padding: 10px 20px;
  border-radius: 5px;
  cursor: pointer;
  margin-top: 10px;
  color: var(--color-white);
}

.details {
  display: flex;
  flex-direction: column;
  gap: 20px;
  padding: 0;
}

.details-row {
  display: flex;
  gap: 20px;
}

.icons i {
  font-size: 1.5em;
  margin: 0 8px;
  color: var(--color-tertiary);
  /* color: #97c2ec; */
  transition: color 0.3s ease;
}

.icons i:hover {
  color: var(--color-tertiary-hover);
}

/* EDUCATION */
.education, .skills, .projects {
  border: 2px solid var(--color-primary);
  /* margin-bottom: 1.5rem; */
  background-color: #ffffff;
  padding: 0;
}

.education, .skills {
  margin-bottom: 1.5rem;
}

.education h3, .skills h3, .projects h3 {
  background-color: var(--color-primary);
  padding: 10px;
  padding-left: 1.5rem;
  text-align: left;
  margin-bottom: 15px;
  margin-top: 0;
  margin-bottom: 0;
  border-bottom: 2px solid var(--color-primary);
  color: var(--color-white);
}

.education-card {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1rem;
  margin-bottom: 0;
  gap: 1.5rem; 
}

.icon-column {
  font-size: 2em;
  color: var(--color-secondary);
  margin-right: 1rem;
}

.text-column {
  flex: 1;
  font-size: 0.8rem;
}

.text-column p {
  font-style: italic;
  font-weight: 300;
  color: #303030;
  margin-top: 0.2rem;
}

.text-column h4 {
  margin-bottom: 0.5rem;
}

/* SKILLS */
.skills {
  padding: 0;
  padding-bottom: 1.5rem;
}

/* .skills-icons {
  display: flex;
  justify-content: space-between;
} */

.skills-icons {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  gap: 0.5rem;
  justify-items: center;
  padding: 1rem 1rem;
}

.skills-icons, .skills p {
  padding: 1rem 1rem 0 1rem;
  margin-bottom: 0;
  /* font-size: 1rem; */
}

.skills p {
  margin-top: 0;
  margin-bottom: 0;
}

/* .skills-icons img {
  width: 1.8rem;
  margin: 0 8px;
  justify-content: center;
} */

.skills-icons img {
  max-width: 35px;
  width: 100%;
  height: auto;
  cursor: pointer;
  pointer-events: auto;
}

/* PROJECTS */
.project-cards {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 2rem;
  padding: 2.5rem;
  max-height: 400px;
  overflow-x: hidden;
  overflow-y: scroll;
  scrollbar-gutter: stable;
  scrollbar-width: thin;
  scrollbar-color: #d6d0c2 #f9f9f9;
}

.project-cards::-webkit-scrollbar {
  width: 12px; 
  height: 8px; 
}

.project-cards::-webkit-scrollbar-thumb {
  background: #bfbfbf; 
  border-radius: 6px;
  border: 3px solid #f9f9f9; 
}

.project-cards::-webkit-scrollbar-track {
  background: #f9f9f9; 
  border-radius: 6px; 
}

.project-card {
  padding: 5px;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center; 
  justify-content: flex-start; 
  border: 1px solid #d2d0d0;
  height: 600px;
  gap: 1rem;
}

.project-text-content {
  flex-grow: 1; 
  overflow-y: auto; 
  min-height: 0; 
  padding: 0 1rem; 
  width: 100%;
}

.project-card h2 {
  text-align: center;
  font-size: 0.8rem;
  font-weight: normal;
  font-style: italic;
  width: 100%;
}

.project-card h2, .project-card img {
  margin-bottom: 1rem;
}

.project-card p {
  font-size: 0.8rem;
  text-align: justify;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  line-height: 1.3rem;
  color: #303030;
  margin-top: 1.2rem;
  margin-bottom: 2rem;
  padding: 0;
  
}
.project-card h2, .project-card h4 {
  margin: 0.3rem;
}

h4 {
  font-size: 1rem;
  margin-top: 0;
  margin-bottom: 0;
  padding: 0;
}

.project-card h2, .project-card i {
  margin-right: 0.5rem;
}

.view-demo-button {
  background-color: var(--color-secondary);
  color: var(--color-white);
  border: none;
  padding: 10px 20px;
  border-radius: 5px;
  cursor: pointer;
  /* margin-top: auto; */
  margin-bottom: 1rem;
}

.thumbnail {
  width: 100%;
  height: auto;
  cursor: pointer;
  transition: opacity 0.3s ease;
}

.thumbnail:hover {
  opacity: 0.7;
}

.hover-message {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: black;
  font-size: 16px;
  font-weight: bold;
  display: none;
}

.thumbnail:hover + .hover-message {
  display: block;
}

.iframe-container {
  position: relative;
  width: 100%;
}

.iframe-container img {
  display: block;
}

.iframe-container iframe {
  display: block;
  width: 100%;
  height: 100%;
}

/* ANIMATIONS */
@keyframes slideIn {
  0% {
    opacity: 0;
    transform: translateY(50px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.profile, .education, .skills, .projects {
  animation: slideIn 2s ease-in-out; 
}

/* TOOLTIP */
.skill-tooltip-container {
  position: relative;
  display: inline-block;
}

.tooltip-text {
  visibility: hidden;
  width: 120px;
  background-color: #333;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 3px 5px; 
  position: absolute;
  z-index: 10;
  top: 50%;
  left: 125%;
  transform: translateY(-50%);
  opacity: 0;
  transition: opacity .3s;
  font-size: 12px;
}

.skill-tooltip-container:hover .tooltip-text {
  visibility: visible;
  opacity: 1;
}

/* MEDIA QUERIES */
@media screen and (max-width: 768px) {

  .container {
    flex-direction: column;
    gap: 5px;
    padding: 15px;
  }

  .column {
    max-height: none;
    flex: 1 1 auto;
    margin-bottom: 20px;
  }

  .profile {
    max-width: 100%;
    padding: 15px;
  }

  .profile img {
    width: 8rem;
  }

  .profile p {
    font-size: 0.8rem;
    padding: 1rem;
  }

  .project-cards {
    grid-template-columns: 1fr;
    padding: 10px;
    justify-items: center;
    gap: 0;
  }

  .project-card {
    height: auto;
    transform: scale(1);
    margin-bottom: 2rem; 
    max-width: 20rem;
  }

  .project-card h2 {
    font-size: 1rem; 
  }

  .project-card p {
    font-size: 0.9rem;
    padding-left: 1rem;
    padding-right: 1rem;
  }

  .view-demo-button {
    padding: 8px 16px;
    margin-bottom: 2rem;
  }

  .icons i {
    font-size: 1.2em;
  }

}

